# aeg-ad

./: .gitignore  README.md  pyproject.toml
aegad/: __init__.py
benchmarks/: README.md  mnist_train.py  out_cnn700_dual_e53.json  out_fashion_tiny_baseline_e10.json  out_fashion_tiny_baseline_e20.json  out_fashion_tiny_baseline_geom_beta0.005_ratio0.1_e20.json  out_fashion_tiny_baseline_geom_beta0.01_ratio0.1_e20.json  out_fashion_tiny_baseline_geom_beta0.02_ratio0.1_e20.json  out_fashion_tiny_baseline_geom_beta0.05_ratio0.1_e20.json  out_fashion_tiny_baseline_geom_beta0.0_ratio0.1_e20.json  out_fashion_tiny_baseline_geom_e20.json  out_mnist_e10.json  out_mnist_e10_alpha0p1.json  out_mnist_e10_alpha1.json  out_mnist_e10_metrics.json  out_mnist_e20_stepwd.json  out_opt_aeg_v3_e106_baseline.json  out_opt_aeg_v3_e53_baseline.json  out_opt_aeg_v3_progress_check.json  out_opt_aeg_v3_smoke_e5.json  out_smoke.json  out_tiny_baseline_e20.json  out_tiny_baseline_e5.json  out_tiny_baseline_geom_beta0.01_ratio0.1_e20.json  out_tiny_baseline_geom_beta0.02_ratio0.03_e20.json  out_tiny_baseline_geom_beta0.02_ratio0.05_e20.json  out_tiny_baseline_geom_beta0.02_ratio0.1_e20.json  out_tiny_baseline_geom_beta0.02_ratio0.2_e20.json  out_tiny_baseline_geom_beta0.05_ratio0.1_e20.json  out_tiny_baseline_geom_beta0.0_ratio0.1_e20.json  out_tiny_baseline_geom_beta0.1_ratio0.03_e20.json  out_tiny_baseline_geom_beta0.1_ratio0.1_e20.json  out_tiny_baseline_geom_beta0.2_ratio0.03_e20.json  out_tiny_baseline_geom_beta0.5_ratio0.03_e20.json  out_tiny_baseline_geom_beta1.0_ratio0.03_e20.json  (+11 more)
(+25 files in other folders)
